# IGNFA-AI-Lab-Legal-RAG

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  FEATURES.md  INSTALLATION.md  LICENSE  MAGIC_PDF_SETUP.md  MANIFEST.in  PROCESSOR_COMPARISON.md  README.md  STREAMLIT_SECRETS.md  USAGE.md  prompt.md  pyproject.toml  requirements.txt  run_ui.py  setup.py  setup_venv.sh  streamlit_app.py  test_prompt_import.py
.streamlit/: secrets.toml.example
docs/: batch_processing.md  context_aware_processing.md  enhanced_markdown.md  offline_setup.md
documents/: README.md
examples/: batch_processing_example.py  enhanced_markdown_example.py  image_format_test.py  insert_content_list_example.py  modalprocessors_example.py  office_document_test.py  raganything_example.py  text_format_test.py
output/chroma_db/: chroma.sqlite3
output/chroma_db/120cef84-4298-4597-8697-8c2aa6bebea0/: index_metadata.pickle
raganything/: __init__.py  base.py  batch.py  batch_parser.py  cli.py  config.py  document_tracker.py  enhanced_markdown.py  modalprocessors.py  parser.py  processor.py  prompt.py  query.py  raganything.py  smart_processor.py  utils.py
raganything/webui/: __init__.py  streamlit_app.py
tests/: __init__.py  conftest.py  test_config.py  test_enhanced_markdown.py  test_modalprocessors.py  test_parser.py  test_processor.py  test_prompt.py  test_utils.py
